fix camera distortion

--- a/client/styles.css
+++ b/client/styles.css
@@ -5,23 +5,23 @@
 }
 
 .inyourface {
-  background-color: white;
-  margin-top: 70px;
-  padding-top: 50px;
+  background-color:white;
+  margin-top:90px;
+  padding-top:20px;
 }
 
 .person-row {
-  width: 100%;
-  margin-top: 10px
+  width:100%;
+  margin-top:10px
 }
 
 .person-name {
-  display: inline-block;
-  width: 30%;
-  font-family: Scada;
-  font-size: 2.0em;
-  font-weight: 700;
-  text-align: center;
+  display:inline-block;
+  width:30%;
+  font-family:Scada;
+  font-size:2.0em;
+  font-weight:700;
+  text-align:center;
 }
 
 .person-image {
@@ -29,15 +29,21 @@
 }
 
 .webcam-buttons {
-  text-align: center;
+  text-align:center;
+  margin:20px;
+}
+.webcam-container {
+  max-width:540px;
+  max-height:300px;
 }
 
-.webcam-position {
-  height: 300px;
-  width: 540px;
-  position: relative;
-  margin: 15px;
-  padding: 15px;
+.canvas-container {
+  max-width:540px;
+  max-height:300px;
+}
+
+#webcam-module-container {
+  margin:15px;
 }
 
 .blue {
